--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ nav {
 }
 .navbar .container {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 90%;
@@ -70,6 +71,15 @@ nav a {
   padding: 0.5rem 1.2rem;
   border: none;
   margin-left: 1rem;
+  .navbar .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .logo {
+    width: 40px;
+    min-width: 40px;
+  }
   border-radius: 5px;
   cursor: pointer;
   font-weight: 600;
